ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: tektutor
 annotations:
   haproxy.router.openshift.io/rewrite-target: / 
spec:
  tls:
   - hosts:
     #- tektutor.apps.zc3qm59u.eastus.aroapp.io
     - ${FQDN}
     secretName: testsecret-tls
  rules:
   #- host: tektutor.apps.zc3qm59u.eastus.aroapp.io
   - host: ${FQDN}
     http:
       paths:
         #- path: /welcome
         - path: /
           pathType: Prefix 
           backend:
             service:
                name: nginx
                port:
                  number: 8080
