ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: tektutor
 annotations:
   haproxy.router.openshift.io/rewrite-target: / 
spec:
 rules:
   - host: tektutor.apps.singapore-cluster.sandbox216.opentlc.com
     http:
       paths:
         #- path: /welcome
         - path: /
           pathType: Prefix 
           backend:
             service:
                name: nginx
                port:
                  number: 8080
